WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11842
REGRESSION: Using Safari's snippet editor leaves applewebdata: URLs in history
https://bugs.webkit.org/show_bug.cgi?id=11842
Summary
REGRESSION: Using Safari's snippet editor leaves applewebdata: URLs in history
mitz
Reported
2006-12-15 11:48:22 PST
Every time you click the Show button in Safari's snippet editor (if it's not empty) it adds an applewebdata://<UUID> URL to Safari's history menu.
Attachments
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2006-12-15 12:53:10 PST
Fixed by Anders in
r18235
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug