        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=11842
        REGRESSION: Using Safari's snippet editor leaves applewebdata: URLs in history

        * loader/mac/DocumentLoaderMac.mm:
        (WebCore::DocumentLoader::URLForHistory):
        Don't return appleweburls without an unreachable url.



Canonical link: https://commits.webkit.org/15307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18235 268f45cc-cd09-0410-ab3c-d52691b4dbfc